created a basic HTML structure and click on events

--- a/index.html
+++ b/index.html
@@ -9,6 +9,43 @@
 </head>
 <body>
 
+    <div class="container">
+        <div class="calculator">
+            <div class="title"></div>
+            <input class="display" id="resultado" placeholder="0"></input>
+            <div class="key-number">
+                <table>
+                    <tr>
+                        <td colspan="2"><button style="width: 106px" onclick="clean()">C</button></td>
+                        <td><button onclick="input('/')">/</button></td>
+                        <td><button onclick="input('*')">x</button></td>
+                    </tr>
+                    <tr>
+                        <td><button onclick="input('7')">7</button></td>
+                        <td><button onclick="input('8')">8</button></td>
+                        <td><button onclick="input('9')">9</button></td>
+                        <td><button onclick="input('-')">-</button></td>
+                    </tr>
+                    <tr>
+                        <td><button onclick="input('4')">4</button></td>
+                        <td><button onclick="input('5')">5</button></td>
+                        <td><button onclick="input('6')">6</button></td>
+                        <td><button onclick="input('+')">+</button></td>
+                    </tr>
+                    <tr>
+                        <td><button onclick="input('1')">1</button></td>
+                        <td><button onclick="input('2')">2</button></td>
+                        <td><button onclick="input('3')">3</button></td>
+                        <td rowspan="2"><button style="height: 106px" onclick="calcular()">=</button></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><button style="width: 106px" onclick="input('0')">0</button></td>
+                        <td><button onclick="input('.')">.</button></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
     
 <script src="assets/js/script.js"></script>
 </body>
